# nano-0.7.4

./: AUTHORS  BUGS  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  README.md  TODO  config.cache  config.h  config.h.in  config.status  configure  configure.in  cut.c  global.c  nano.1  nano.c  nano.h  proto.h  utils.c  winio.c
autom4te.cache/: output.0  requests  traces.0
