dnl Process this file with autoconf to produce a configure script.
AC_INIT(nano.c)
AM_INIT_AUTOMAKE(nano, 0.7.4)
AM_CONFIG_HEADER(config.h:config.h.in)

dnl Checks for programs.
AC_PROG_CC

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(fcntl.h unistd.h malloc.h)

dnl Checks for functions
AC_CHECK_FUNCS(snprintf)

dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.
AC_TYPE_SIGNAL
AC_FUNC_VPRINTF

dnl Checks for libraries.

AC_CHECK_HEADERS(curses.h ncurses.h)

CURSES_LIB_NAME=""
AC_CHECK_LIB(ncurses, tgetent, CURSES_LIB="-lncurses" CURSES_LIB_NAME=ncurses)

if eval "test x$CURSES_LIB_NAME = x"
then
    AC_CHECK_LIB(curses, tgetent, CURSES_LIB="-lcurses" CURSES_LIB_NAME=curses)
fi

if eval "test x$CURSES_LIB_NAME = x"
then
    AC_CHECK_LIB(termcap, tgetent, CURSES_LIB="-ltermcap" CURSES_LIB_NAME=termcap)
fi

if eval "test x$CURSES_LIB_NAME = x"
then
    AC_MSG_WARN(No termcap lib, things may break)
else
    AC_MSG_RESULT("Using $CURSES_LIB_NAME as the termcap library")
fi


dnl Parse any configure options

CFLAGS="-Wall -O2"
LDFLAGS="$CURSES_LIB -s"
AC_ARG_ENABLE(debug, [  --enable-debug         Enable debugging (def disabled)],
        if eval "test x$enable_debug = xyes"
	then
	    CFLAGS="-Wall -g"
	    LDFLAGS=$CURSES_LIB
	fi)

AC_SUBST(CURSES_LIB)
AC_OUTPUT(Makefile)
